--- a/ai_assistant/requirements.txt
+++ b/ai_assistant/requirements.txt
@@ -11,13 +11,13 @@ python-multipart==0.0.6
 requests==2.31.0
 
 # Procesamiento de datos
-pandas==2.1.3
-numpy==1.24.3
+pandas>=2.2.0
+numpy>=1.26.0
 
 # Procesamiento de lenguaje natural
 openai==1.3.7
 transformers==4.35.2
-torch==2.1.1
+torch>=2.2.0
 tokenizers==0.15.0
 
 # Utilidades
